# czbx

./: README.md  colors.py  czbx.py  help.py  pyproject.toml  requirements.txt  setup.cfg  zabbix.py
src/czbx/: __init__.py  help.py
